--- a/.github/workflows/build_and_test_eshop.yml
+++ b/.github/workflows/build_and_test_eshop.yml
@@ -14,12 +14,12 @@ jobs:
           token: ${{ secrets.WORKFLOW_TOKEN }}
 
       - name: Setup NodeJS
-        uses: action/setup-node@v3.5.1
+        uses: actions/setup-node@v3.5.1
         with:
           node-version: 10
 
       - name: Cahce node modules
-        uses: action/cache@v3.0.11
+        uses: actions/cache@v3.0.11
         with:
           path: node_modules
           key: node_modules-${{ hashFiles('**/package-lock.json') }}
@@ -40,12 +40,12 @@ jobs:
           token: ${{ secrets.WORKFLOW_TOKEN }}
 
       - name: Setup NodeJS
-        uses: action/setup-node@v3.5.1
+        uses: actions/setup-node@v3.5.1
         with:
           node-version: 10
 
       - name: Cahce node modules
-        uses: action/cache@v3.0.11
+        uses: actions/cache@v3.0.11
         with:
           path: node_modules
           key: node_modules-${{ hashFiles('**/package-lock.json') }}
