--- a/.github/workflows/build_and_test_eshop.yml
+++ b/.github/workflows/build_and_test_eshop.yml
@@ -2,7 +2,10 @@ name: Build and test eshop
 
 on:
   workflow_dispatch:
+  pull_request:
   push:
+    branches:
+      - 'master'
 
 jobs:
   Install:
@@ -94,7 +97,7 @@ jobs:
 
   Deploy:
     needs: [Build, Test]
-    if: ${{ github.ref == 'refs/heads/master' }}
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
     runs-on: ubuntu-latest
 
     steps:
